# AegisubDC

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.test.txt  CMakeLists.txt  LICENCE  Makefile.inc.in  Makefile.target  README.md  configure.ac  git_version.xml
.travis/: install.sh
LICENSE.md/: LICENSE.md  Readme.md
automation/autoload/: l0.DependencyControl.Toolbox.moon  ln.kara-templater-mod.lua
automation/include/: Yutils.lua  json.lua
automation/include/BM/: BadMutex.lua
automation/include/DM/: DownloadManager.lua
automation/include/PT/: PreciseTimer.lua
automation/include/json/: decode.lua  encode.lua  util.lua
automation/include/json/decode/: composite.lua  number.lua  others.lua  state.lua  strings.lua  util.lua
automation/include/json/encode/: array.lua  calls.lua  number.lua  object.lua  others.lua  output.lua  output_utility.lua  strings.lua
automation/include/l0/: DependencyControl.moon
automation/include/l0/DependencyControl/: ConfigHandler.moon  FileOps.moon  Logger.moon  UnitTestSuite.moon  UpdateFeed.moon  Updater.moon
automation/include/ln/: kara.lua
automation/include/requireffi/: requireffi.lua
automation/tests/: aegisub.cpp
automation/v4-docs/: get-frame.txt
cmake/: FindAviSynth.cmake  FindFFMS2.cmake  FindFFTW.cmake  FindHunspell.cmake  FindOSS.cmake  FindPortAudio.cmake  FindPulseAudio.cmake  FindUchardet.cmake  FindXAudio2redist.cmake  Findass.cmake  Finduchardet.cmake  hunspell_string_api.cpp
libaegisub/: lagi_pre.h
libaegisub/ass/: time.cpp
libaegisub/audio/: provider.cpp  provider_convert.cpp  provider_hd.cpp  provider_lock.cpp  provider_ram.cpp
libaegisub/common/: charset.cpp  charset_conv.cpp  dispatch.cpp  file_mapping.cpp  fs.cpp  io.cpp  keyframe.cpp  line_iterator.cpp  log.cpp  parser.cpp  util.cpp  ycbcr_conv.cpp
libaegisub/include/libaegisub/: exception.h  io.h  log.h  ycbcr_conv.h
libaegisub/include/libaegisub/ass/: dialogue_parser.h  time.h
libaegisub/include/libaegisub/audio/: provider.h
libaegisub/lua/: script_reader.cpp
libaegisub/unix/: log.cpp
libaegisub/windows/: access.cpp  log_win.cpp
po/: LINGUAS  README_ja.txt  aegisub.pot  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fa.po  fi.po  fr_FR.po  gl.po  hu.po  id.po  it.po  ja.po  ko.po  make_pot.sh  nl.po  pl.po  potty.py  pt_BR.po  pt_PT.po  ru.po  sr_RS.po  sr_RS@latin.po  uk_UA.po  vi.po  zh_CN.po  zh_TW.po
scripts/: createcmake.bat  packdbg.bat  packrelease.bat  packrelwithdbg.bat
src/: Makefile  agi_pre.h  ass_dialogue.cpp  ass_style.cpp  audio_display.cpp  audio_display.h  audio_karaoke.cpp  audio_player.cpp  audio_player_alsa.cpp  audio_player_dsound.cpp  audio_player_dsound2.cpp  audio_player_openal.cpp  audio_player_oss.cpp  audio_player_portaudio.cpp  audio_player_pulse.cpp  audio_player_xaudio2.cpp  audio_provider_avs.cpp  audio_provider_factory.cpp  audio_provider_ffmpegsource.cpp  audio_renderer.cpp  audio_renderer.h  audio_renderer_spectrum.cpp  audio_renderer_waveform.cpp  audio_timing_dialogue.cpp  audio_timing_karaoke.cpp  auto4_base.cpp  auto4_lua.cpp  auto4_lua_assfile.cpp  auto4_lua_dialog.cpp  avisynth_wrap.cpp  base_grid.cpp  base_grid.h  block_cache.h  colour_button.cpp  colour_button.h  dialog_about.cpp  dialog_align.cpp  dialog_autosave.cpp  dialog_colorpicker.cpp  dialog_dummy_video.cpp  (+64 more)
src/bitmaps/: manifest.respack
src/command/: command.h  edit.cpp  time.cpp  video.cpp
src/libresrc/: default_config.json  default_config_win.json  default_config_win.json.in  default_hotkey.json  default_menu.json  default_toolbar.json  libresrc.cpp  libresrc.h
src/libresrc/osx/: default_config.json
tests/: setup.bat  setup.ps1
tests/tests/: audio.cpp
tmp/RelWithDebInfo/: Aegisub.exp  Aegisub.lib  luajit-buildvm.ilk  luajit-minilua.ilk
tmp/RelWithDebInfo/automation/include/: moonscript.lua
tools/: osx-bundle.sh
